// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VRadioGroup.vue should be in error when v-radio-group is 1`] = `

<div role="radiogroup"
     class="input-group input-group--error radio-group radio-group--column error--text"
>
  <div class="input-group__input">
    <div role="radio"
         aria-checked="true"
         class="input-group input-group--active input-group--selection-controls radio"
         tabindex="0"
    >
      <label>
      </label>
      <div class="input-group__input">
        <i aria-hidden="true"
           class="material-icons icon icon--selection-control fade-transition-leave fade-transition-leave-active"
           style="font-size: 24px;"
        >
          radio_button_unchecked
        </i>
        <i aria-hidden="true"
           class="material-icons icon icon--selection-control icon--radio fade-transition-enter fade-transition-enter-active"
           style="font-size: 24px; -webkit-transform-origin: top center 0;"
        >
          radio_button_checked
        </i>
        <div class="input-group--selection-controls__ripple"
             data-ripple="true"
        >
        </div>
        <input type="radio"
               style="display: none;"
        >
      </div>
    </div>
  </div>
  <div class="input-group__details">
    <!---->
  </div>
</div>

`;

exports[`VRadioGroup.vue should be in error when v-radio-group is 2`] = `

<div role="radiogroup"
     class="input-group radio-group radio-group--column"
>
  <div class="input-group__input">
    <div role="radio"
         aria-checked="true"
         class="input-group input-group--active input-group--selection-controls radio accent--text"
         tabindex="0"
    >
      <label>
      </label>
      <div class="input-group__input">
        <i aria-hidden="true"
           class="material-icons icon icon--selection-control fade-transition-leave fade-transition-leave-active"
           style="font-size: 24px;"
        >
          radio_button_unchecked
        </i>
        <i aria-hidden="true"
           class="material-icons icon icon--selection-control icon--radio fade-transition-enter fade-transition-enter-active"
           style="font-size: 24px; -webkit-transform-origin: top center 0;"
        >
          radio_button_checked
        </i>
        <div class="input-group--selection-controls__ripple"
             data-ripple="true"
        >
        </div>
        <input type="radio"
               style="display: none;"
        >
      </div>
    </div>
  </div>
  <div class="input-group__details">
    <!---->
  </div>
</div>

`;

exports[`VRadioGroup.vue should render role on radio group 1`] = `

<div role="radiogroup"
     class="input-group radio-group radio-group--column"
>
  <div class="input-group__input">
  </div>
  <div class="input-group__details">
    <!---->
  </div>
</div>

`;
